changed groovy script for not depending any more on uberfire version